--- a/index.html
+++ b/index.html
@@ -19,6 +19,84 @@
 
 <body>
 
+<a id="owens"></a>
+<ul class="titlebar">
+  <li class="title">
+    <h3>Owen's Ski & Climb</h3>
+  </li>
+  <li class="date">
+    February 2015
+  </li>
+</ul>
+<div style="clear:both"></div>
+<div class="line"></div>
+
+<div class="highslide-gallery wrap">
+  <div class="photo rot1">
+    <a class="highslide" href="hq/owens/IMG_2296.jpg"
+      title=""
+      onclick="return hs.expand(this, config_owens)">
+      <img width="160" height="120" src="thumbs/owens/IMG_2296.jpg" alt="IMG_2296.jpg" />
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/owens/R0010869.jpg"
+      title=""
+      onclick="return hs.expand(this, config_owens)">
+      <img width="330" height="120" src="thumbs/owens/R0010869.jpg" alt="R0010869.jpg" />
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/owens/R0010918.jpg"
+      title=""
+      onclick="return hs.expand(this, config_owens)">
+      <img width="188" height="120" src="thumbs/owens/R0010918.jpg" alt="R0010918.jpg" />
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/owens/R0010930.jpg"
+      title=""
+      onclick="return hs.expand(this, config_owens)">
+      <img width="181" height="120" src="thumbs/owens/R0010930.jpg" alt="R0010930.jpg" />
+    </a>
+  </div>
+  <div class="photo rot5">
+    <a class="highslide" href="hq/owens/R0010958.jpg"
+      title=""
+      onclick="return hs.expand(this, config_owens)">
+      <img width="174" height="120" src="thumbs/owens/R0010958.jpg" alt="R0010958.jpg" />
+    </a>
+  </div>
+  <div class="photo rot0">
+    <a class="highslide" href="hq/owens/R0010967.jpg"
+      title=""
+      onclick="return hs.expand(this, config_owens)">
+      <img width="181" height="120" src="thumbs/owens/R0010967.jpg" alt="R0010967.jpg" />
+    </a>
+  </div>
+  <div class="photo rot1">
+    <a class="highslide" href="hq/owens/R0010976.jpg"
+      title=""
+      onclick="return hs.expand(this, config_owens)">
+      <img width="181" height="120" src="thumbs/owens/R0010976.jpg" alt="R0010976.jpg" />
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/owens/R0011019.jpg"
+      title=""
+      onclick="return hs.expand(this, config_owens)">
+      <img width="181" height="120" src="thumbs/owens/R0011019.jpg" alt="R0011019.jpg" />
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/owens/R0011031.jpg"
+      title=""
+      onclick="return hs.expand(this, config_owens)">
+      <img width="72" height="120" src="thumbs/owens/R0011031.jpg" alt="R0011031.jpg" />
+    </a>
+  </div>
+  <div style="clear:both"></div>
+</div>
 <a id="zermatt"></a> 
 <ul class="titlebar">
   <li class="title">
@@ -36,28 +114,40 @@
     <a class="highslide" href="hq/zermatt/IMG_2256.jpg"
       title=""
       onclick="return hs.expand(this, config_zermatt)">
-      <img width="160" height="120" src="thumbs/zermatt/IMG_2256.jpg" alt="IMG_2256.jpg" />
+      <img class="lazy galleries/zermatt" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/zermatt/IMG_2256.jpg" alt="IMG_2256.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/zermatt/IMG_2256.jpg" alt="IMG_2256.jpg" />
+      </noscript>
     </a>
   </div>
   <div class="photo rot2">
     <a class="highslide" href="hq/zermatt/IMG_2261.jpg"
       title=""
       onclick="return hs.expand(this, config_zermatt)">
-      <img width="160" height="120" src="thumbs/zermatt/IMG_2261.jpg" alt="IMG_2261.jpg" />
+      <img class="lazy galleries/zermatt" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/zermatt/IMG_2261.jpg" alt="IMG_2261.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/zermatt/IMG_2261.jpg" alt="IMG_2261.jpg" />
+      </noscript>
     </a>
   </div>
   <div class="photo rot3">
     <a class="highslide" href="hq/zermatt/IMG_2267.jpg"
       title=""
       onclick="return hs.expand(this, config_zermatt)">
-      <img width="160" height="120" src="thumbs/zermatt/IMG_2267.jpg" alt="IMG_2267.jpg" />
+      <img class="lazy galleries/zermatt" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/zermatt/IMG_2267.jpg" alt="IMG_2267.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/zermatt/IMG_2267.jpg" alt="IMG_2267.jpg" />
+      </noscript>
     </a>
   </div>
   <div class="photo rot4">
     <a class="highslide" href="hq/zermatt/IMG_2271.jpg"
       title=""
       onclick="return hs.expand(this, config_zermatt)">
-      <img width="160" height="120" src="thumbs/zermatt/IMG_2271.jpg" alt="IMG_2271.jpg" />
+      <img class="lazy galleries/zermatt" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/zermatt/IMG_2271.jpg" alt="IMG_2271.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/zermatt/IMG_2271.jpg" alt="IMG_2271.jpg" />
+      </noscript>
     </a>
   </div>
 
@@ -75,7 +165,7 @@
 <div class="highslide-html-content" id="zermatt-video"
     style="width: 641px">
     <div class="highslide-body">
-      <video class="video" width="640" height="360" controls="controls" preload="none" poster="videos/zermatt.jpg">
+      <video class="video" width="640" height="480" controls="controls" preload="none" poster="videos/zermatt.jpg">
         <source src="videos/zermatt.mp4" type="video/mp4" />
         Your browser does not support the video tag.
       </video> 
@@ -586,91 +676,6 @@
       <img class="lazy galleries/shuteye2" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/shuteye2/Z999.jpg" alt="Z999.jpg" />
       <noscript>
         <img width="160" height="120" src="thumbs/shuteye2/Z999.jpg" alt="Z999.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div style="clear:both"></div>
-</div>
-<a id="ggsemi"></a> 
-<ul class="titlebar">
-  <li class="title">
-    <h3>Golden Gate Semi</h3>
-  </li>
-  <li class="date">
-    July 2014
-  </li>
-</ul>
-<div style="clear:both"></div>
-<div class="line"></div>
-
-<div class="highslide-gallery wrap">
-  <div class="photo rot1">
-    <a class="highslide" href="hq/ggsemi/1.jpg"
-      title=""
-      onclick="return hs.expand(this, config_ggsemi)">
-      <img class="lazy galleries/ggsemi" width="164" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/ggsemi/1.jpg" alt="1.jpg" />
-      <noscript>
-        <img width="164" height="120" src="thumbs/ggsemi/1.jpg" alt="1.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/ggsemi/DSC_7051.jpg"
-      title=""
-      onclick="return hs.expand(this, config_ggsemi)">
-      <img class="lazy galleries/ggsemi" width="80" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/ggsemi/DSC_7051.jpg" alt="DSC_7051.jpg" />
-      <noscript>
-        <img width="80" height="120" src="thumbs/ggsemi/DSC_7051.jpg" alt="DSC_7051.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/ggsemi/DSC_7071.jpg"
-      title=""
-      onclick="return hs.expand(this, config_ggsemi)">
-      <img class="lazy galleries/ggsemi" width="80" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/ggsemi/DSC_7071.jpg" alt="DSC_7071.jpg" />
-      <noscript>
-        <img width="80" height="120" src="thumbs/ggsemi/DSC_7071.jpg" alt="DSC_7071.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/ggsemi/DSC_7091.jpg"
-      title=""
-      onclick="return hs.expand(this, config_ggsemi)">
-      <img class="lazy galleries/ggsemi" width="80" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/ggsemi/DSC_7091.jpg" alt="DSC_7091.jpg" />
-      <noscript>
-        <img width="80" height="120" src="thumbs/ggsemi/DSC_7091.jpg" alt="DSC_7091.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot5">
-    <a class="highslide" href="hq/ggsemi/DSC_7209.jpg"
-      title=""
-      onclick="return hs.expand(this, config_ggsemi)">
-      <img class="lazy galleries/ggsemi" width="80" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/ggsemi/DSC_7209.jpg" alt="DSC_7209.jpg" />
-      <noscript>
-        <img width="80" height="120" src="thumbs/ggsemi/DSC_7209.jpg" alt="DSC_7209.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot0">
-    <a class="highslide" href="hq/ggsemi/IMG_1981.jpg"
-      title=""
-      onclick="return hs.expand(this, config_ggsemi)">
-      <img class="lazy galleries/ggsemi" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/ggsemi/IMG_1981.jpg" alt="IMG_1981.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/ggsemi/IMG_1981.jpg" alt="IMG_1981.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot1">
-    <a class="highslide" href="hq/ggsemi/IMG_1984.jpg"
-      title=""
-      onclick="return hs.expand(this, config_ggsemi)">
-      <img class="lazy galleries/ggsemi" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/ggsemi/IMG_1984.jpg" alt="IMG_1984.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/ggsemi/IMG_1984.jpg" alt="IMG_1984.jpg" />
       </noscript>
     </a>
   </div>
