--- a/content1.html
+++ b/content1.html
@@ -1,3 +1,88 @@
+<a id="ggsemi"></a> 
+<ul class="titlebar">
+  <li class="title">
+    <h3>Golden Gate Semi</h3>
+  </li>
+  <li class="date">
+    July 2014
+  </li>
+</ul>
+<div style="clear:both"></div>
+<div class="line"></div>
+
+<div class="highslide-gallery wrap">
+  <div class="photo rot1">
+    <a class="highslide" href="hq/ggsemi/1.jpg"
+      title=""
+      onclick="return hs.expand(this, config_ggsemi)">
+      <img class="lazy galleries/ggsemi" width="164" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/ggsemi/1.jpg" alt="1.jpg" />
+      <noscript>
+        <img width="164" height="120" src="thumbs/ggsemi/1.jpg" alt="1.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/ggsemi/DSC_7051.jpg"
+      title=""
+      onclick="return hs.expand(this, config_ggsemi)">
+      <img class="lazy galleries/ggsemi" width="80" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/ggsemi/DSC_7051.jpg" alt="DSC_7051.jpg" />
+      <noscript>
+        <img width="80" height="120" src="thumbs/ggsemi/DSC_7051.jpg" alt="DSC_7051.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/ggsemi/DSC_7071.jpg"
+      title=""
+      onclick="return hs.expand(this, config_ggsemi)">
+      <img class="lazy galleries/ggsemi" width="80" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/ggsemi/DSC_7071.jpg" alt="DSC_7071.jpg" />
+      <noscript>
+        <img width="80" height="120" src="thumbs/ggsemi/DSC_7071.jpg" alt="DSC_7071.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/ggsemi/DSC_7091.jpg"
+      title=""
+      onclick="return hs.expand(this, config_ggsemi)">
+      <img class="lazy galleries/ggsemi" width="80" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/ggsemi/DSC_7091.jpg" alt="DSC_7091.jpg" />
+      <noscript>
+        <img width="80" height="120" src="thumbs/ggsemi/DSC_7091.jpg" alt="DSC_7091.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot5">
+    <a class="highslide" href="hq/ggsemi/DSC_7209.jpg"
+      title=""
+      onclick="return hs.expand(this, config_ggsemi)">
+      <img class="lazy galleries/ggsemi" width="80" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/ggsemi/DSC_7209.jpg" alt="DSC_7209.jpg" />
+      <noscript>
+        <img width="80" height="120" src="thumbs/ggsemi/DSC_7209.jpg" alt="DSC_7209.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot0">
+    <a class="highslide" href="hq/ggsemi/IMG_1981.jpg"
+      title=""
+      onclick="return hs.expand(this, config_ggsemi)">
+      <img class="lazy galleries/ggsemi" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/ggsemi/IMG_1981.jpg" alt="IMG_1981.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/ggsemi/IMG_1981.jpg" alt="IMG_1981.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot1">
+    <a class="highslide" href="hq/ggsemi/IMG_1984.jpg"
+      title=""
+      onclick="return hs.expand(this, config_ggsemi)">
+      <img class="lazy galleries/ggsemi" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/ggsemi/IMG_1984.jpg" alt="IMG_1984.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/ggsemi/IMG_1984.jpg" alt="IMG_1984.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div style="clear:both"></div>
+</div>
 <a id="emeraldsdonner"></a> 
 <ul class="titlebar">
   <li class="title">
@@ -960,141 +1045,6 @@
       <img class="lazy galleries/marion2" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/marion2/IMG_9999.jpg" alt="IMG_9999.jpg" />
       <noscript>
         <img width="160" height="120" src="thumbs/marion2/IMG_9999.jpg" alt="IMG_9999.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div style="clear:both"></div>
-</div>
-<a id="Sierra"></a> 
-<ul class="titlebar">
-  <li class="title">
-    <h3>Sierra Adventures</h3>
-  </li>
-  <li class="date">
-    November 2013
-  </li>
-</ul>
-<div style="clear:both"></div>
-<div class="line"></div>
-
-<div class="highslide-gallery wrap">
-  <div class="photo rot1">
-    <a class="highslide" href="hq/sierra/IMG_0958.jpg"
-      title=""
-      onclick="return hs.expand(this, config_sierra)">
-      <img class="lazy galleries/sierra" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/sierra/IMG_0958.jpg" alt="IMG_0958.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/sierra/IMG_0958.jpg" alt="IMG_0958.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/sierra/IMG_0962.jpg"
-      title=""
-      onclick="return hs.expand(this, config_sierra)">
-      <img class="lazy galleries/sierra" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/sierra/IMG_0962.jpg" alt="IMG_0962.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/sierra/IMG_0962.jpg" alt="IMG_0962.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/sierra/IMG_0962prime.jpg"
-      title=""
-      onclick="return hs.expand(this, config_sierra)">
-      <img class="lazy galleries/sierra" width="212" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/sierra/IMG_0962prime.jpg" alt="IMG_0962prime.jpg" />
-      <noscript>
-        <img width="212" height="120" src="thumbs/sierra/IMG_0962prime.jpg" alt="IMG_0962prime.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/sierra/IMG_0975.jpg"
-      title=""
-      onclick="return hs.expand(this, config_sierra)">
-      <img class="lazy galleries/sierra" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/sierra/IMG_0975.jpg" alt="IMG_0975.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/sierra/IMG_0975.jpg" alt="IMG_0975.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot5">
-    <a class="highslide" href="hq/sierra/IMG_0977.jpg"
-      title=""
-      onclick="return hs.expand(this, config_sierra)">
-      <img class="lazy galleries/sierra" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/sierra/IMG_0977.jpg" alt="IMG_0977.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/sierra/IMG_0977.jpg" alt="IMG_0977.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot0">
-    <a class="highslide" href="hq/sierra/IMG_0978.jpg"
-      title=""
-      onclick="return hs.expand(this, config_sierra)">
-      <img class="lazy galleries/sierra" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/sierra/IMG_0978.jpg" alt="IMG_0978.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/sierra/IMG_0978.jpg" alt="IMG_0978.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot1">
-    <a class="highslide" href="hq/sierra/IMG_0988.jpg"
-      title=""
-      onclick="return hs.expand(this, config_sierra)">
-      <img class="lazy galleries/sierra" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/sierra/IMG_0988.jpg" alt="IMG_0988.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/sierra/IMG_0988.jpg" alt="IMG_0988.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/sierra/IMG_1002.jpg"
-      title=""
-      onclick="return hs.expand(this, config_sierra)">
-      <img class="lazy galleries/sierra" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/sierra/IMG_1002.jpg" alt="IMG_1002.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/sierra/IMG_1002.jpg" alt="IMG_1002.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/sierra/IMG_1025.jpg"
-      title=""
-      onclick="return hs.expand(this, config_sierra)">
-      <img class="lazy galleries/sierra" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/sierra/IMG_1025.jpg" alt="IMG_1025.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/sierra/IMG_1025.jpg" alt="IMG_1025.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/sierra/IMG_1037.jpg"
-      title=""
-      onclick="return hs.expand(this, config_sierra)">
-      <img class="lazy galleries/sierra" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/sierra/IMG_1037.jpg" alt="IMG_1037.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/sierra/IMG_1037.jpg" alt="IMG_1037.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot5">
-    <a class="highslide" href="hq/sierra/IMG_1038.jpg"
-      title=""
-      onclick="return hs.expand(this, config_sierra)">
-      <img class="lazy galleries/sierra" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/sierra/IMG_1038.jpg" alt="IMG_1038.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/sierra/IMG_1038.jpg" alt="IMG_1038.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot0">
-    <a class="highslide" href="hq/sierra/IMG_1044.jpg"
-      title=""
-      onclick="return hs.expand(this, config_sierra)">
-      <img class="lazy galleries/sierra" width="105" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/sierra/IMG_1044.jpg" alt="IMG_1044.jpg" />
-      <noscript>
-        <img width="105" height="120" src="thumbs/sierra/IMG_1044.jpg" alt="IMG_1044.jpg" />
       </noscript>
     </a>
   </div>
