--- a/content2.html
+++ b/content2.html
@@ -1,3 +1,138 @@
+<a id="Sierra"></a> 
+<ul class="titlebar">
+  <li class="title">
+    <h3>Sierra Adventures</h3>
+  </li>
+  <li class="date">
+    November 2013
+  </li>
+</ul>
+<div style="clear:both"></div>
+<div class="line"></div>
+
+<div class="highslide-gallery wrap">
+  <div class="photo rot1">
+    <a class="highslide" href="hq/sierra/IMG_0958.jpg"
+      title=""
+      onclick="return hs.expand(this, config_sierra)">
+      <img class="lazy galleries/sierra" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/sierra/IMG_0958.jpg" alt="IMG_0958.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/sierra/IMG_0958.jpg" alt="IMG_0958.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/sierra/IMG_0962.jpg"
+      title=""
+      onclick="return hs.expand(this, config_sierra)">
+      <img class="lazy galleries/sierra" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/sierra/IMG_0962.jpg" alt="IMG_0962.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/sierra/IMG_0962.jpg" alt="IMG_0962.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/sierra/IMG_0962prime.jpg"
+      title=""
+      onclick="return hs.expand(this, config_sierra)">
+      <img class="lazy galleries/sierra" width="212" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/sierra/IMG_0962prime.jpg" alt="IMG_0962prime.jpg" />
+      <noscript>
+        <img width="212" height="120" src="thumbs/sierra/IMG_0962prime.jpg" alt="IMG_0962prime.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/sierra/IMG_0975.jpg"
+      title=""
+      onclick="return hs.expand(this, config_sierra)">
+      <img class="lazy galleries/sierra" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/sierra/IMG_0975.jpg" alt="IMG_0975.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/sierra/IMG_0975.jpg" alt="IMG_0975.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot5">
+    <a class="highslide" href="hq/sierra/IMG_0977.jpg"
+      title=""
+      onclick="return hs.expand(this, config_sierra)">
+      <img class="lazy galleries/sierra" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/sierra/IMG_0977.jpg" alt="IMG_0977.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/sierra/IMG_0977.jpg" alt="IMG_0977.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot0">
+    <a class="highslide" href="hq/sierra/IMG_0978.jpg"
+      title=""
+      onclick="return hs.expand(this, config_sierra)">
+      <img class="lazy galleries/sierra" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/sierra/IMG_0978.jpg" alt="IMG_0978.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/sierra/IMG_0978.jpg" alt="IMG_0978.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot1">
+    <a class="highslide" href="hq/sierra/IMG_0988.jpg"
+      title=""
+      onclick="return hs.expand(this, config_sierra)">
+      <img class="lazy galleries/sierra" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/sierra/IMG_0988.jpg" alt="IMG_0988.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/sierra/IMG_0988.jpg" alt="IMG_0988.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/sierra/IMG_1002.jpg"
+      title=""
+      onclick="return hs.expand(this, config_sierra)">
+      <img class="lazy galleries/sierra" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/sierra/IMG_1002.jpg" alt="IMG_1002.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/sierra/IMG_1002.jpg" alt="IMG_1002.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/sierra/IMG_1025.jpg"
+      title=""
+      onclick="return hs.expand(this, config_sierra)">
+      <img class="lazy galleries/sierra" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/sierra/IMG_1025.jpg" alt="IMG_1025.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/sierra/IMG_1025.jpg" alt="IMG_1025.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/sierra/IMG_1037.jpg"
+      title=""
+      onclick="return hs.expand(this, config_sierra)">
+      <img class="lazy galleries/sierra" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/sierra/IMG_1037.jpg" alt="IMG_1037.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/sierra/IMG_1037.jpg" alt="IMG_1037.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot5">
+    <a class="highslide" href="hq/sierra/IMG_1038.jpg"
+      title=""
+      onclick="return hs.expand(this, config_sierra)">
+      <img class="lazy galleries/sierra" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/sierra/IMG_1038.jpg" alt="IMG_1038.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/sierra/IMG_1038.jpg" alt="IMG_1038.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot0">
+    <a class="highslide" href="hq/sierra/IMG_1044.jpg"
+      title=""
+      onclick="return hs.expand(this, config_sierra)">
+      <img class="lazy galleries/sierra" width="105" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/sierra/IMG_1044.jpg" alt="IMG_1044.jpg" />
+      <noscript>
+        <img width="105" height="120" src="thumbs/sierra/IMG_1044.jpg" alt="IMG_1044.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div style="clear:both"></div>
+</div>
 <a id="Shuteye"></a> 
 <ul class="titlebar">
   <li class="title">
@@ -859,91 +994,6 @@
       <img class="lazy galleries/eastbuttress" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/eastbuttress/98.jpg" alt="98.jpg" />
       <noscript>
         <img width="160" height="120" src="thumbs/eastbuttress/98.jpg" alt="98.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div style="clear:both"></div>
-</div>
-<a id="Pinnacles2"></a> 
-<ul class="titlebar">
-  <li class="title">
-    <h3>Pinnacles</h3>
-  </li>
-  <li class="date">
-    April 2013
-  </li>
-</ul>
-<div style="clear:both"></div>
-<div class="line"></div>
-
-<div class="highslide-gallery wrap">
-  <div class="photo rot1">
-    <a class="highslide" href="hq/pinnacles2/10.jpg"
-      title=""
-      onclick="return hs.expand(this, config_pinnacles2)">
-      <img class="lazy galleries/pinnacles2" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/pinnacles2/10.jpg" alt="10.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/pinnacles2/10.jpg" alt="10.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/pinnacles2/12.jpg"
-      title=""
-      onclick="return hs.expand(this, config_pinnacles2)">
-      <img class="lazy galleries/pinnacles2" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/pinnacles2/12.jpg" alt="12.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/pinnacles2/12.jpg" alt="12.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/pinnacles2/14.jpg"
-      title=""
-      onclick="return hs.expand(this, config_pinnacles2)">
-      <img class="lazy galleries/pinnacles2" width="180" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/pinnacles2/14.jpg" alt="14.jpg" />
-      <noscript>
-        <img width="180" height="120" src="thumbs/pinnacles2/14.jpg" alt="14.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/pinnacles2/20.jpg"
-      title=""
-      onclick="return hs.expand(this, config_pinnacles2)">
-      <img class="lazy galleries/pinnacles2" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/pinnacles2/20.jpg" alt="20.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/pinnacles2/20.jpg" alt="20.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot5">
-    <a class="highslide" href="hq/pinnacles2/80.jpg"
-      title=""
-      onclick="return hs.expand(this, config_pinnacles2)">
-      <img class="lazy galleries/pinnacles2" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/pinnacles2/80.jpg" alt="80.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/pinnacles2/80.jpg" alt="80.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot0">
-    <a class="highslide" href="hq/pinnacles2/95.jpg"
-      title=""
-      onclick="return hs.expand(this, config_pinnacles2)">
-      <img class="lazy galleries/pinnacles2" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/pinnacles2/95.jpg" alt="95.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/pinnacles2/95.jpg" alt="95.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot1">
-    <a class="highslide" href="hq/pinnacles2/99.jpg"
-      title=""
-      onclick="return hs.expand(this, config_pinnacles2)">
-      <img class="lazy galleries/pinnacles2" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/pinnacles2/99.jpg" alt="99.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/pinnacles2/99.jpg" alt="99.jpg" />
       </noscript>
     </a>
   </div>
