--- a/content4.html
+++ b/content4.html
@@ -1,3 +1,138 @@
+<a id="RoyalArches"></a> 
+<ul class="titlebar">
+  <li class="title">
+    <h3>Royal Arches</h3>
+  </li>
+  <li class="date">
+    September 2012
+  </li>
+</ul>
+<div style="clear:both"></div>
+<div class="line"></div>
+
+<div class="highslide-gallery wrap">
+  <div class="photo rot1">
+    <a class="highslide" href="hq/royal_arches/HPIM1752.jpg"
+      title="Kai and I on top of the second pitch. Lots of rope-less scrambling until Pitch 5."
+      onclick="return hs.expand(this, config_royal_arches)">
+      <img class="lazy galleries/royal_arches" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/royal_arches/HPIM1752.jpg" alt="HPIM1752.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/royal_arches/HPIM1752.jpg" alt="HPIM1752.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/royal_arches/HPIM1754.jpg"
+      title="Morning sun on Glacier Point."
+      onclick="return hs.expand(this, config_royal_arches)">
+      <img class="lazy galleries/royal_arches" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/royal_arches/HPIM1754.jpg" alt="HPIM1754.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/royal_arches/HPIM1754.jpg" alt="HPIM1754.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/royal_arches/HPIM1755.jpg"
+      title="Kai leading Pitch 5, a finger crack protected with nuts."
+      onclick="return hs.expand(this, config_royal_arches)">
+      <img class="lazy galleries/royal_arches" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/royal_arches/HPIM1755.jpg" alt="HPIM1755.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/royal_arches/HPIM1755.jpg" alt="HPIM1755.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/royal_arches/HPIM1766.jpg"
+      title="A 5.7 variation climbing in a hand-sized water streak. Awesome pitch!"
+      onclick="return hs.expand(this, config_royal_arches)">
+      <img class="lazy galleries/royal_arches" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/royal_arches/HPIM1766.jpg" alt="HPIM1766.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/royal_arches/HPIM1766.jpg" alt="HPIM1766.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot5">
+    <a class="highslide" href="hq/royal_arches/HPIM1776.jpg"
+      title="The fixed rope which can be used to bypass the friction 5.10b traverse visible up high."
+      onclick="return hs.expand(this, config_royal_arches)">
+      <img class="lazy galleries/royal_arches" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/royal_arches/HPIM1776.jpg" alt="HPIM1776.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/royal_arches/HPIM1776.jpg" alt="HPIM1776.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot0">
+    <a class="highslide" href="hq/royal_arches/HPIM1780.jpg"
+      title="The traverse is right above me where the rope ends. At first, it feels impossible and requires blind faith in your feet. Surprisingly, it does work! This is the technical crux of the route."
+      onclick="return hs.expand(this, config_royal_arches)">
+      <img class="lazy galleries/royal_arches" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/royal_arches/HPIM1780.jpg" alt="HPIM1780.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/royal_arches/HPIM1780.jpg" alt="HPIM1780.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot1">
+    <a class="highslide" href="hq/royal_arches/HPIM1783.jpg"
+      title="Route finding was easy on this popular climb. Just follow the slightly polished granite."
+      onclick="return hs.expand(this, config_royal_arches)">
+      <img class="lazy galleries/royal_arches" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/royal_arches/HPIM1783.jpg" alt="HPIM1783.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/royal_arches/HPIM1783.jpg" alt="HPIM1783.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/royal_arches/HPIM1785.jpg"
+      title="Kai is wondering where to go next. It is during the descend we really got lost."
+      onclick="return hs.expand(this, config_royal_arches)">
+      <img class="lazy galleries/royal_arches" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/royal_arches/HPIM1785.jpg" alt="HPIM1785.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/royal_arches/HPIM1785.jpg" alt="HPIM1785.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/royal_arches/HPIM1787.jpg"
+      title="By pitch 12, the sun is fully out and it is getting hot. View of the Cathedral Spires (in the background)."
+      onclick="return hs.expand(this, config_royal_arches)">
+      <img class="lazy galleries/royal_arches" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/royal_arches/HPIM1787.jpg" alt="HPIM1787.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/royal_arches/HPIM1787.jpg" alt="HPIM1787.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/royal_arches/HPIM1795.jpg"
+      title="The end of the Yosemite valley. Half Dome is hidden behind North Dome on the left."
+      onclick="return hs.expand(this, config_royal_arches)">
+      <img class="lazy galleries/royal_arches" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/royal_arches/HPIM1795.jpg" alt="HPIM1795.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/royal_arches/HPIM1795.jpg" alt="HPIM1795.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot5">
+    <a class="highslide" href="hq/royal_arches/HPIM991794.jpg"
+      title="In 10 seconds, I will drop the camera down there. The tree (right) caught it."
+      onclick="return hs.expand(this, config_royal_arches)">
+      <img class="lazy galleries/royal_arches" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/royal_arches/HPIM991794.jpg" alt="HPIM991794.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/royal_arches/HPIM991794.jpg" alt="HPIM991794.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot0">
+    <a class="highslide" href="hq/royal_arches/z99.jpg"
+      title="Getting down was an adventure. After three hours of aimless wandering, we gave up on finding the North Dome trail, and bush-wacked our way down through the Indian Canyon gully."
+      onclick="return hs.expand(this, config_royal_arches)">
+      <img class="lazy galleries/royal_arches" width="169" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/royal_arches/z99.jpg" alt="z99.jpg" />
+      <noscript>
+        <img width="169" height="120" src="thumbs/royal_arches/z99.jpg" alt="z99.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div style="clear:both"></div>
+</div>
 <a id="Tallac"></a> 
 <ul class="titlebar">
   <li class="title">
